// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Template Specialization/ObjectDescription Duplicate Fields 1`] = `
<dl
  className="description-list"
>
  <dt
    className="description-list__term description-list__term--single"
  >
    First Name
  </dt>
  <dd
    className="description-list__description description-list__description--single"
  >
    Antoinette
  </dd>
  <dt
    className="description-list__term description-list__term--single"
  >
    Last Name
  </dt>
  <dd
    className="description-list__description description-list__description--single"
  >
    Gerlach
  </dd>
  <dt
    className="description-list__term description-list__term--single"
  >
    Age
  </dt>
  <dd
    className="description-list__description description-list__description--single"
  >
    100
  </dd>
  <dt
    className="description-list__term description-list__term--single"
  >
    Sign Up Date
  </dt>
  <dd
    className="description-list__description description-list__description--single"
  >
    <time
      dateTime={"2019-06-27T17:37:04.085Z"}
      title="2019-06-27T17:37:04+00:00"
    >
      June 27, 2019
    </time>
  </dd>
  <dt
    className="description-list__term description-list__term--single"
  >
    Seconds since signup
  </dt>
  <dd
    className="description-list__description description-list__description--single"
  >
    47802175915
  </dd>
</dl>
`;

exports[`Storyshots Template Specialization/ObjectDescription Nested Data 1`] = `
<dl
  className="description-list"
>
  <dt
    className="description-list__term description-list__term--single"
  >
    Name First
  </dt>
  <dd
    className="description-list__description description-list__description--single"
  >
    Jeremie
  </dd>
  <dt
    className="description-list__term description-list__term--single"
  >
    Name Last
  </dt>
  <dd
    className="description-list__description description-list__description--single"
  >
    Toy
  </dd>
  <dt
    className="description-list__term description-list__term--single"
  >
    Sign Up Date
  </dt>
  <dd
    className="description-list__description description-list__description--single"
  >
    <time
      dateTime={"2020-04-13T11:43:36.795Z"}
      title="2020-04-13T11:43:36+00:00"
    >
      April 13, 2020
    </time>
  </dd>
  <dt
    className="description-list__term description-list__term--single"
  >
    Age
  </dt>
  <dd
    className="description-list__description description-list__description--single"
  >
    67
  </dd>
</dl>
`;

exports[`Storyshots Template Specialization/ObjectDescription Object Description 1`] = `
<dl
  className="description-list"
>
  <dt
    className="description-list__term description-list__term--single"
  >
    First Name
  </dt>
  <dd
    className="description-list__description description-list__description--single"
  >
    Jessika
  </dd>
  <dt
    className="description-list__term description-list__term--single"
  >
    Last Name
  </dt>
  <dd
    className="description-list__description description-list__description--single"
  >
    O'Connell
  </dd>
  <dt
    className="description-list__term description-list__term--single"
  >
    Age
  </dt>
  <dd
    className="description-list__description description-list__description--single"
  >
    84
  </dd>
  <dt
    className="description-list__term description-list__term--single"
  >
    Sign Up Date
  </dt>
  <dd
    className="description-list__description description-list__description--single"
  >
    <time
      dateTime={"2020-05-04T09:53:30.618Z"}
      title="2020-05-04T09:53:30+00:00"
    >
      May 4, 2020
    </time>
  </dd>
</dl>
`;

exports[`Storyshots Template Specialization/ObjectDescription Out Of Order 1`] = `
<dl
  className="description-list"
>
  <dt
    className="description-list__term description-list__term--single"
  >
    Last Name
  </dt>
  <dd
    className="description-list__description description-list__description--single"
  >
    Bins
  </dd>
  <dt
    className="description-list__term description-list__term--single"
  >
    First Name
  </dt>
  <dd
    className="description-list__description description-list__description--single"
  >
    Georgianna
  </dd>
  <dt
    className="description-list__term description-list__term--single"
  >
    Sign Up Date
  </dt>
  <dd
    className="description-list__description description-list__description--single"
  >
    <time
      dateTime={"2020-03-08T15:40:21.504Z"}
      title="2020-03-08T15:40:21+00:00"
    >
      March 8, 2020
    </time>
  </dd>
  <dt
    className="description-list__term description-list__term--single"
  >
    Age
  </dt>
  <dd
    className="description-list__description description-list__description--single"
  >
    41
  </dd>
</dl>
`;
